--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "devDependencies": {
     "typescript": "^5.2.2",
     "vitest": "^0.34.3",
-    "prettier": "3.0.3"
+    "prettier": "3.0.3",
+    "@types/node": "^20.6.0"
   },
   "dependencies": {
     "tslib": "^2.6.2"
