--- a/pkgs/db/package.json
+++ b/pkgs/db/package.json
@@ -2,13 +2,20 @@
   "name": "@dialecta/db",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts",
+  "types": "src/index.ts",
   "scripts": {
     "test": "vitest run",
     "test:watch": "vitest",
-    "build": "tsc"
+    "push": "prisma db push --skip-generate",
+    "build": "prisma generate && tsc"
   },
   "dependencies": {
-    "@dialecta/tsconfig": "workspace:*"
+    "@dialecta/tsconfig": "workspace:*",
+    "prisma-kysely": "1.7.0",
+    "kysely": "^0.26.3"
+  },
+  "devDependencies": {
+    "prisma": "~5.2.0"
   }
 }
