--- a/pkgs/openai-experiments/package.json
+++ b/pkgs/openai-experiments/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@dialecta/tsconfig": "workspace:*",
+    "@dialecta/db": "workspace:*",
     "gpt-tokenizer": "^2.1.1",
     "openai": "^4.6.0",
     "rxjs": "^7.8.1"
